[project]
name = "gpx_to_geojson"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Jonathan Boyle", email = "j.n.boyle@reading.ac.uk" }]
dependencies = ["gpxpy>=1.6.2", "tqdm>=4.66.4", "typer>=0.12.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
gpx-to-geojson = "gpx_to_geojson.gpx_to_geojson:app"


[tool.pdm]
distribution = false
